Fix author line.

--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,7 @@ gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
   <nobr><sup>2</sup><a href="https://cs.technion.ac.il/" target="_blank"
   >Technion - IIT</a></nobr>;
   <nobr><sup>3</sup><a href="https://www.csail.mit.edu/" target="_blank"
-  >MIT CSAIL</a></nobr>;
-<nobr><sup>*</sup>Equal contribution</nobr>
+  >MIT CSAIL</a></nobr>
 
 </address>
  </div>
