Fix author line.

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@ gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
   <nobr><a href="https://belinkov.com/" target="_blank"
   >Yonatan Belinkov</a><sup>2</sup>,</nobr>
   <nobr><a href="https://joaanna.github.io/" target="_blank"
-  >Joanna Materzy&#324;ska</a><sup>*3</sup>,</nobr>
+  >Joanna Materzy&#324;ska</a><sup>3</sup>,</nobr>
   <nobr><a href="https://baulab.info/" target="_blank"
   >David Bau</a><sup>1</sup></nobr>
  <br>
