--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,9 @@ gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
 
 <p>
 <a href="https://arxiv.org/pdf/2303.07345.pdf" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/paper-thumb.png" style="border:1px solid; margin: 0 38px;" alt="ArXiv Preprint thumbnail" data-nothumb=""><br>ArXiv<br>Preprint</a>
-<a href="https://github.com/rohitgandikota/uce" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/code-thumb.png" style="border:1px solid; margin: 0 38px;" alt="Github code thumbnail" data-nothumb=""><br>Source Code<br>Github</a>
-<a href="https://uce.baulab.info/weights/esd_models/" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/data-thumb.png" style="border:1px solid; margin: 0 38px;" alt="Data thumbnail" data-nothumb=""><br>Fine-Tuned<br>Model  Weights</a>
-<a href="https://huggingface.co/spaces/baulab/Erasing-Concepts-In-Diffusion" class="d-inline-block p-3 align-bottom" target="_blank"><img height="78" width="104" src="images/demo3x4-thumb.png" style="border:1px solid" alt="Huggingface demo thumbnail" data-nothumb=""><br>Huggingface<br>Demo</a>
+<a href="https://github.com/rohitgandikota/unified-concept-editing" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/code-thumb.png" style="border:1px solid; margin: 0 38px;" alt="Github code thumbnail" data-nothumb=""><br>Source Code<br>Github</a>
+<a href="https://unified.baulab.info/weights/uce_models/" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/data-thumb.png" style="border:1px solid; margin: 0 38px;" alt="Data thumbnail" data-nothumb=""><br>Fine-Tuned<br>Model  Weights</a>
+<!-- <a href="https://huggingface.co/spaces/baulab/Erasing-Concepts-In-Diffusion" class="d-inline-block p-3 align-bottom" target="_blank"><img height="78" width="104" src="images/demo3x4-thumb.png" style="border:1px solid" alt="Huggingface demo thumbnail" data-nothumb=""><br>Huggingface<br>Demo</a> -->
 </p>
 
 <div class="card" style="max-width: 1020px;">
@@ -122,8 +122,8 @@ the whole model on filtered training data.
 <div class="col">
   
 <figure class="center_image" style="margin-top: 30px">
-  <center><img src="images/paper/main.png" style="width:100%; max-width:800px"></center>
-  <figcaption> Our method can be used to erase a wide variety of concepts including nudity, art styles or even objects permanently from the model weights.
+  <center><img src="images/paper/intro.png" style="width:100%; max-width:800px"></center>
+  <figcaption> UCE can unifiedly debias, erase and moderate concepts in diffusion models. Unlike previous model editing methods that address each application individually, our method can simultaneously edit multiple concepts with minimal interference
   </figcaption>
 </figure>
 
@@ -150,7 +150,63 @@ the whole model on filtered training data.
   </p>
   
 <h2> How to erase concepts from the model? </h2>
+
+<h2> More results on artistic style erasure </h2>
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/style1.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Erasing 1 artist. On left, we show the original vs edited for the intended erasure. On the right, we show the interference with unerased artists. We find that our method efficiently erases while having the least inteference.
+    </figcaption>
+  </figure>
+
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/style2.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Erasing 5 artists at a time. On left, we show the original vs edited for the intended erasure. On the right, we show the interference with unerased artists. We find that our method efficiently erases while having the least inteference.
+    </figcaption>
+  </figure>
+
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/style3.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Erasing 10 artists at a time. On left, we show the original vs edited for the intended erasure. On the right, we show the interference with unerased artists. We find that our method efficiently erases while having the least inteference.
+    </figcaption>
+  </figure>
+
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/style4.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Erasing 50 artists at a time. On left, we show the original vs edited for the intended erasure. On the right, we show the interference with unerased artists. We find that our method efficiently erases while having the least inteference.
+    </figcaption>
+  </figure>
+<h2> More results on debiasing professions </h2>
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/gender1.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Our method improves gender representation for professions in diffusion models.
+    </figcaption>
+  </figure>
   
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/gender2.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Our method improves gender representation for professions in diffusion models.
+    </figcaption>
+  </figure>
+  
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/gender3.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Our method improves gender representation for professions in diffusion models.
+    </figcaption>
+  </figure>
+
+   
+ <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/race1.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Our method improves race representation for professions in diffusion models.
+    </figcaption>
+  </figure>
+
+   
+ <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/race2.png" style="width:100%; max-width:800px"></center>
+    <figcaption> Our method improves race representation for professions in diffusion models.
+    </figcaption>
+  </figure>
 <h2>How to cite</h2>
 
 <p>The preprint can be cited as follows.
