--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@ gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
 <p>
 <a href="https://arxiv.org/pdf/2303.07345.pdf" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/paper-thumb.png" style="border:1px solid; margin: 0 38px;" alt="ArXiv Preprint thumbnail" data-nothumb=""><br>ArXiv<br>Preprint</a>
 <a href="https://github.com/rohitgandikota/unified-concept-editing" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/code-thumb.png" style="border:1px solid; margin: 0 38px;" alt="Github code thumbnail" data-nothumb=""><br>Source Code<br>Github</a>
-<a href="https://unified.baulab.info/weights/uce_models/" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/data-thumb.png" style="border:1px solid; margin: 0 38px;" alt="Data thumbnail" data-nothumb=""><br>Fine-Tuned<br>Model  Weights</a>
+<!-- <a href="https://unified.baulab.info/weights/uce_models/" class="d-inline-block p-3 align-top" target="_blank"><img height="100" width="78" src="images/data-thumb.png" style="border:1px solid; margin: 0 38px;" alt="Data thumbnail" data-nothumb=""><br>Fine-Tuned<br>Model  Weights</a> -->
 <!-- <a href="https://huggingface.co/spaces/baulab/Erasing-Concepts-In-Diffusion" class="d-inline-block p-3 align-bottom" target="_blank"><img height="78" width="104" src="images/demo3x4-thumb.png" style="border:1px solid" alt="Huggingface demo thumbnail" data-nothumb=""><br>Huggingface<br>Demo</a> -->
 </p>
 
@@ -134,9 +134,21 @@ Key advantages versus finetuning approaches include: efficient scaling of editin
     We propose a closed-form solution that can unifiedly address these challenges at scale, editing multiple concepts concurrently with minimal interference.
   </p>
   
-<h2> How to erase concepts from the model? </h2>
-
-<h2> More results on artistic style erasure </h2>
+<h2> How to edit concepts simultaneously in diffusion models? </h2>
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/method.png" style="width:100%; max-width:800px"></center>
+    <figcaption> We update the weights of cross attention linear layers in closed-form by conditioning its outputs for the concepts to edit and preserve. Our method, UCE, does not require any training data collection or any gradient descent. UCE can debias, erase, and moderate concepts together in a single edit and scales to editing multiple concepts while minimizing interference with unedited concepts.
+    </figcaption>
+  </figure>
+  <p>We edit the cross attention weights by conditioning new target output for the concept embeddings to edit and preserve the previoud outputs for concepts to preserve. We minimize the loss shown in the figure above through closed-form update
+  </p>
+  <center><img src="images/paper/uce_closed.png" style="width:180px;padding-bottom:10px;"></center>
+  <p> Our method generalizes to previous state-of-the-art model editing methods like <a href="https://arxiv.org/pdf/2303.08084.pdf">TIME</a> and 
+    <a href="https://openreview.net/pdf?id=MkbcAHIYgyS">MEMIT</a>. Our method can also be generalised to editing any linear projection.</p>
+<h2> Erasing an artistic style</h2>
+  <p>Models like Stable Diffusion can mimic <a href="https://proximacentaurib.notion.site/About-Image-Synthesis-Style-Studies-4dcbd554f4b0403d802dc5b26fb3b8e9">more than 1500 artistic style</a>. Not all artists are excited about their art being mimiced by genrative models and wish to be opted-out of these models' vocubulary.
+  Recent works have been working on <a href="https://spawning.ai">filtering the training data</a> to accomodate the opt-out requests from individuals. Eventhough such filtering would exclude the artists from future models that are trained on the filtered dataset, model editing may still be needed for certain artists that aren't fully addressed. We propose using UCE that is scalable, fast, and displays minimal interference with other artists. 
+  To erase style, we use the name of the artist and steer them towards general prompts like "art" or ""</p>
   <figure class="center_image" style="margin-top: 30px">
     <center><img src="images/paper/style1.png" style="width:100%; max-width:800px"></center>
     <figcaption> Erasing 1 artist. On left, we show the original vs edited for the intended erasure. On the right, we show the interference with unerased artists. We find that our method efficiently erases while having the least inteference.
@@ -160,8 +172,11 @@ Key advantages versus finetuning approaches include: efficient scaling of editin
     <figcaption> Erasing 50 artists at a time. On left, we show the original vs edited for the intended erasure. On the right, we show the interference with unerased artists. We find that our method efficiently erases while having the least inteference.
     </figcaption>
   </figure>
-<h2> More results on debiasing professions </h2>
-  <figure class="center_image" style="margin-top: 30px">
+<h2> Debiasing a profession across gender and race</h2>
+  <p> Previous debiasing methods address only dual attributed biases, however, attributes like race are multi-faceted. We propose a multi-faceted debiasing formulation that can be scaled for multiple concepts. Our method has strong debiasing results, improving the race and gender representation in diffusion models.
+  <center><img src="images/paper/debias_equation.png" style="width:180px;padding-bottom:10px;"></center>
+    <p>This formulation allows UCE to address multi-attribute biases like race. We show some quantitative results of our method displaying improved race and gender diversity.</p>
+    <figure class="center_image" style="margin-top: 30px">
     <center><img src="images/paper/gender1.png" style="width:100%; max-width:800px"></center>
     <figcaption> Our method improves gender representation for professions in diffusion models.
     </figcaption>
@@ -192,6 +207,16 @@ Key advantages versus finetuning approaches include: efficient scaling of editin
     <figcaption> Our method improves race representation for professions in diffusion models.
     </figcaption>
   </figure>
+
+<h2> Moderating an unsafe concept</h2>
+  <p>We test our method on moderating unsafe concepts like <i>"nudity"</i>. We compare our method with <a href="https://erasing.baulab.info">ESD-u and ESD-x</a>. We find that our method has similar performance as ESD-x when erasing a single concept, but our method shows minimal interference with other concepts in the model. 
+  We also see that moderating multiple unsafe concepts like <i>"harm, violence, child abuse, blood, nudity"</i>, our method shows a stronger moderation effect on the model as seen in the figure below.</p>
+  <figure class="center_image" style="margin-top: 30px">
+    <center><img src="images/paper/bar_plot.png" style="width:100%; max-width:800px"></center>
+    <figcaption> We show the percentage reduction in unsafe nudity samples compared to Original SD as classified by <a href="https://github.com/notAI-tech/NudeNet">Nudenet</a>. We find that our method has a superior performance when moderating multiple unsafe concepts.
+    </figcaption>
+  </figure>
+  
 <h2>How to cite</h2>
 
 <p>The preprint can be cited as follows.
