--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@ Key advantages versus finetuning approaches include: efficient scaling of editin
   <p>We test our method on moderating unsafe concepts like <i>"nudity"</i>. We compare our method with <a href="https://erasing.baulab.info">ESD-u and ESD-x</a>. We find that our method has similar performance as ESD-x when erasing a single concept, but our method shows minimal interference with other concepts in the model. 
   We also see that moderating multiple unsafe concepts like <i>"harm, violence, child abuse, blood, nudity"</i>, our method shows a stronger moderation effect on the model as seen in the figure below.</p>
   <figure class="center_image" style="margin-top: 30px">
-    <center><img src="images/paper/bar_plot.png" style="width:100%; max-width:800px"></center>
+    <center><img src="images/paper/nudity_bar.png" style="width:100%; max-width:800px"></center>
     <figcaption> We show the percentage reduction in unsafe nudity samples compared to Original SD as classified by <a href="https://github.com/notAI-tech/NudeNet">Nudenet</a>. We find that our method has a superior performance when moderating multiple unsafe concepts.
     </figcaption>
   </figure>
