--- a/src/index.html
+++ b/src/index.html
@@ -102,10 +102,10 @@ Previous methods have separately addressed individual issues of bias, copyright,
 
 </p>
 <p>
-In this paper, we present a method that tackles all issues with a single approach. 
+In this paper, we present a method that tackles those diverse issues with a single approach. 
   Our method, Unified Concept Editing (UCE), edits the model without training using <b>a closed-form solution conditioned on cross attention outputs</b>, and scales seamlessly to concurrent edits on text-conditional diffusion models.
-UCE enables direct editing of concepts based on phrases and attributes without training data, supporting rapid iteration.
-Key advantages versus finetuning approaches include: efficient scaling of editing multiple concepts, precise concept changes by editing cross-attention weights directly and avoiding broad interference, and rapid iteration from fast closed-form editing
+UCE enables direct editing of concepts based on phrases and attributes without use of new training data, supporting rapid iteration.
+Key advantages versus finetuning approaches include: efficient scaling of editing multiple concepts, precise concept changes through direct modification of model weights, avoidance of interference with protected or unrelated concepts, and rapid iteration from fast closed-form editing
 </p>
 </div><!--card-block-->
 </div><!--card-->
