--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,7 @@ Key advantages versus finetuning approaches include: efficient scaling of editin
   
 <h2>How to cite</h2>
 
-<p>The preprint can be cited as follows.
+<p>The paper can be cited as follows.
 </p>
 
 <div class="card">
@@ -233,7 +233,7 @@ IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2024.</nobr
 <h3 class="card-header">bibtex</h3>
 <div class="card-block">
 <pre class="card-text clickselect">
-@article{gandikota2023unified,
+@article{gandikota2024unified,
   title={Unified Concept Editing in Diffusion Models},
   author={Rohit Gandikota and Hadas Orgad and Yonatan Belinkov and Joanna Materzy\'nska and David Bau},
   journal={IEEE/CVF Winter Conference on Applications of Computer Vision},
