--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@ gtag('js', new Date()); gtag('config', 'G-FD12LWN557');
   <nobr><a href="https://rohitgandikota.github.io/" target="_blank"
   >Rohit Gandikota</a><sup>1</sup>,</nobr>
   <nobr><a href="https://orgadhadas.github.io/" target="_blank"
-  >Hadas Orad</a><sup>2</sup>,</nobr>
+  >Hadas Orgad</a><sup>2</sup>,</nobr>
   <nobr><a href="https://belinkov.com/" target="_blank"
   >Yonatan Belinkov</a><sup>2</sup>,</nobr>
   <nobr><a href="https://joaanna.github.io/" target="_blank"
